syntax = "proto3";

package mechain.meservice;

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";
import "mechain/meservice/fixed_deposit.proto";

option go_package = "me-chain/x/meservice/types";

// Msg defines the Msg service.
service Msg {
  rpc DoFixedDeposit              (MsgDoFixedDeposit             ) returns (MsgDoFixedDepositResponse             );
  rpc DoFixedWithdraw             (MsgDoFixedWithdraw            ) returns (MsgDoFixedWithdrawResponse            );
  rpc SetFixedDepositInterestRate (MsgSetFixedDepositInterestRate) returns (MsgSetFixedDepositInterestRateResponse);
}
message MsgDoFixedDeposit {
  string                   account   = 1;
  cosmos.base.v1beta1.Coin principal = 2 [(gogoproto.nullable) = false];
  FixedDepositTerm         term      = 4;
}

message MsgDoFixedDepositResponse {
  uint64 id = 1;
}

message MsgDoFixedWithdraw {
  string account = 1;
  uint64 id      = 2;
}

message MsgDoFixedWithdrawResponse {
  string retcode = 1;
}

message MsgSetFixedDepositInterestRate {
  string admin = 1;
  FixedDepositTerm term  = 2;
  string rate  = 3 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable)   = false
  ];
}

message MsgSetFixedDepositInterestRateResponse {
  string retcode = 1;
}

